# unpack-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: .gitignore  CMakeLists.txt  run.sh
src/example/: CMakeLists.txt  main.c  test.swamp-pack
src/include/swamp-unpack/: swamp_unpack.h
src/lib/: unpack.c
